# Auto-trans

./: .gitignore  CHANGELOG.md  GUIDE_OCR_BENCHMARK_AND_DEEPMODE.md  README.md  REPORT_2026-03-31_PADDLEOCR_RUNTIME.md  REPORT_2026-04-01_PADDLEOCR_ONLY.md  bootstrap_portable.ps1  build_exe.ps1  create_share_zip.ps1  main.py  preset.toml  pyproject.toml  pysidedeploy.spec  release_share.ps1  requirements-portable-full.txt  requirements-portable-lite.txt  run.ps1  run_ollama_lan.ps1  run_portable.cmd  run_portable.ps1  run_windows.cmd  run_windows.ps1  setup_windows.ps1
docs/: README.md  architecture.md  changelog.md  configuration-and-env.md  deepmode-flow.md  getting-started.md  maintenance-and-test-plan.md  ocr-benchmark-and-deepmode.md  runtime-flow.md
docs/reports/: 2026-03-31-paddleocr-runtime.md  2026-04-01-local-translator-benchmark.md  2026-04-01-paddleocr-only.md
src/autotrans/: app.py  config.py  models.py
src/autotrans.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: sample-gemini-deep-request.json  test_cache.py  test_deep_mode.py  test_groq_deepmode_benchmark.py  test_local_translator_benchmark.py  test_ocr_runtime_providers.py  test_orchestrator.py  test_policy.py  test_runtime_logging.py  test_subtitle.py  test_tracker.py  test_translation.py
tests/ocr_test/: benchmark_subtitle_runtime.py  subtitle_runtime_benchmark.json
tests/sample-screenshot/: debug_all_pngs.py  debug_subtitle.py  probe_ctranslate2.py  probe_ctranslate2_sentences.py  quest1.deepmode-paddleocr_auto-ocr-boxes.json  render_test_images.py  (+8 more)
(+23 files in other folders)
